@@ -5,6 +5,8 @@ Release date:
 
 New features:
 
+* Allow transposing by +2/-2 semitones
+
 Bug fixes:
 
 * Fix GitHub Issue #21: Clicking on the empty area of a note column won't set focus
